@@ -1,14 +1,18 @@
 #' Get the UID codes from NCBI for species names.
 #' 
-#' A function to retrieve the UID-Code (Unique Identifier) of a species from NCBI taxonomy browser.
+#' Retrieve the Unique Identifier (UID) of a species from NCBI taxonomy browser.
 #' 
 #' @import plyr RCurl
 #' @param sciname character; scientific name.
 #' @param verbose logical; If TRUE the actual taxon queried is printed on the console.
-#' @return UID for the supplied species names. NA for non-matching names.
+#' 
+#' @return A vector of unique identifiers (UID). If a species is not found NA. 
+#' If more than one UID is found the function asks for user input. 
+#' 
+#' @seealso \code{\link[taxize]{get_tsn}}
 #' 
 #' @export
-#' @author Eduard Szoecs \email{szoe8822@@uni-landau.de}
+#' @author Eduard Szoecs, \email{szoe8822@@uni-landau.de}
 #' 
 #' @examples \dontrun{
 #' get_uid(c("Chironomus riparius", "Chaetopteryx"))
