@@ -1,29 +1,34 @@
-#' Get taxonomic names for a given taxonomic name query.
+#' Get taxonomic names for a given rank.
 #' 
-#' Specify what database you want to use: itis or ncbi.
+#' Retrieve name of querried taxonomic rank of a taxon.
 #' 
 #' @param query character; Vector of taxonomic names to query.
-#' @param get character; The ranks of the taxonomic name to get. 
-#' @param db character; The database to search from: 'tis', 'ncbi' or 'both'.
+#' @param get character; The ranks of the taxonomic name to get, see \code{\link[taxize]{rank_ref}}.
+#' @param db character; The database to search from: 'itis', 'ncbi' or 'both'.
 #'  If 'both' both NCBI and ITIS will be queried. Result will be the union of both.
-#' @param pref character; If db='both', sets the preference for the union. Either 'ncbi' or 'itis'. 
-#' Currently not implemented - preference is given to ncbi
+#' @param pref character; If db = 'both', sets the preference for the union. Either 'ncbi' or 'itis'. 
+#' Currently not implemented - preference is given to ncbi.
 #' @param verbose logical; If TRUE the actual taxon queried is printed on the console.
 #' 
 #' @return A data.frame with one column for every queried rank.
 #' 
+#' @note While \code{\link[taxize]{tax_rank}} returns the actual rank of a taxon,
+#' \code{\link[taxize]{tax_name}} searches and returns any specified rank higher in taxonmy.
+#' 
+#' @seealso \code{\link[taxize]{classification}}
+#' 
 #' @examples \dontrun{
 #' # A case where itis and ncbi use the same names
-#' tax_name(query="Helianthus annuus", get="family", db="itis")
-#' tax_name(query="Helianthus annuus", get="family", db="ncbi")
+#' tax_name(query = "Helianthus annuus", get = "family", db = "itis")
+#' tax_name(query = "Helianthus annuus", get = "family", db = "ncbi")
 #' 
 #' # Case where itis and ncbi use different names
-#' tax_name(query="Helianthus annuus", get="kingdom", db="itis")
-#' tax_name(query="Helianthus annuus", get="kingdom", db="ncbi")
+#' tax_name(query = "Helianthus annuus", get = "kingdom", db = "itis")
+#' tax_name(query = "Helianthus annuus", get = "kingdom", db = "ncbi")
 #' 
 #' # multiple get arguments
-#' tax_name(query=c("Helianthus annuus","Baetis rhodani"), get=c("genus", "kingdom"), db="ncbi")
-#' tax_name(query="xxx", get=c("genus", "kingdom"), db="itis")
+#' tax_name(query = c("Helianthus annuus","Baetis rhodani"), get = c("genus", "kingdom"), db = "ncbi")
+#' tax_name(query = "xxx", get = c("genus", "kingdom"), db = "itis")
 #' 
 #' # query both
 #' tax_name(query=c("Helianthus annuus", 'Baetis rhodani'), get=c("genus", "kingdom"), db="both")
@@ -43,7 +48,7 @@ tax_name <- function(query = NULL, get = NULL, db = "itis", pref = 'ncbi', verbo
   fun <- function(query, get, db, verbose){
     # ITIS
   	if(db == "itis"){
-  		tsn <- get_tsn(query, searchtype="sciname", verbose = verbose)
+  		tsn <- get_tsn(query, searchtype = "sciname", verbose = verbose)
       if(is.na(tsn)) {
         if(verbose) 
           message("No TSN found for species '", query, "'!\n")
@@ -96,11 +101,11 @@ tax_name <- function(query = NULL, get = NULL, db = "itis", pref = 'ncbi', verbo
         match_tsn <- tt$taxonName[match(tolower(get), tolower(tt$rankName))]
       }
       match_both <- ifelse(is.na(match_uid), match_tsn, match_uid)
-      out <- data.frame(t(match_both), stringsAsFactors=FALSE)
+      out <- data.frame(t(match_both), stringsAsFactors = FALSE)
       names(out) <- get     
     }
     return(out)
   }
-  out <- ldply(query, .fun=function(x) fun(query=x, get=get, db=db, verbose=verbose))
+  out <- ldply(query, .fun = function(x) fun(query = x, get = get, db = db, verbose = verbose))
   return(out)
 }
