@@ -6,13 +6,13 @@
     verbose = TRUE)
 }
 \arguments{
-  \item{searchterm}{A vector of common or scientific
-  names.}
+  \item{searchterm}{character; A vector of common or
+  scientific names.}
 
-  \item{searchtype}{One of 'sciname', 'anymatch',
-  'comnamebeg', 'comname', 'comnameend'.}
+  \item{searchtype}{character; One of 'sciname',
+  'anymatch', 'comnamebeg', 'comname', 'comnameend'.}
 
-  \item{verbose}{should progress be printed?}
+  \item{verbose}{logical; should progress be printed?}
 }
 \value{
   A vector of taxonomic serial numbers (TSN). If a species
@@ -21,17 +21,20 @@
   \code{itis} function.
 }
 \description{
-  \code{get_tsn} uses a variety of functions from the
-  \code{itis} function.
+  Retrieve the taxonomic serial numbers (TSN) of a species
+  from ITIS.
 }
 \examples{
 \dontrun{
-get_tsn(searchterm="Quercus douglasii", searchtype="sciname")
-get_tsn(searchterm="Chironomus riparius", searchtype="sciname")
+get_tsn(searchterm = "Quercus douglasii", searchtype = "sciname")
+get_tsn(searchterm = "Chironomus riparius", searchtype = "sciname")
 get_tsn(c("Chironomus riparius","Quercus douglasii"), "sciname")
 splist <- c("annona cherimola", 'annona muricata', "quercus robur",
 		"shorea robusta", "pandanus patina", "oryza sativa", "durio zibethinus")
-get_tsn(splist,"sciname")
+get_tsn(splist, "sciname")
 }
+}
+\seealso{
+  \code{\link[taxize]{get_uid}}
 }
 
