@@ -1,6 +1,6 @@
 \name{tax_rank}
 \alias{tax_rank}
-\title{Get taxonomic rank for a given taxonomic name query.}
+\title{Get rank for a given taxonomic name.}
 \usage{
   tax_rank(query = NULL, db = "itis", pref = "ncbi",
     verbose = TRUE)
@@ -13,7 +13,7 @@
   'ncbi' or 'both'.  If 'both' both NCBI and ITIS will be
   queried. Result will be the union of both.}
 
-  \item{pref}{If db='both', sets the preference for the
+  \item{pref}{If db = 'both', sets the preference for the
   union. Either 'ncbi' or 'itis'.}
 
   \item{verbose}{logical; If TRUE the actual taxon queried
@@ -23,14 +23,19 @@
   A data.frame with one column for every queried taxon.
 }
 \description{
-  Specify what database you want to use: itis or ncbi.
+  Retrieve rank of a taxon.
+}
+\note{
+  While \code{\link[taxize]{tax_name}} returns the name of
+  a specified rank, \code{\link[taxize]{tax_rank}} returns
+  the actual rank of the taxon.
 }
 \examples{
 \dontrun{
-tax_rank(query="Helianthus annuus", db="itis")
-tax_rank(query="Helianthus annuus", db="ncbi")
-tax_rank(query="Helianthus, db="itis")
-tax_rank(query="Baetis rhodani", db="itis")
+tax_rank(query = "Helianthus annuus", db = "itis")
+tax_rank(query = "Helianthus annuus", db = "ncbi")
+tax_rank(query = "Helianthus, db = "itis")
+tax_rank(query = "Baetis rhodani", db = "itis")
 
 # query both
 tax_rank(query=c("Helianthus annuus", 'Baetis rhodani'), db="both")
@@ -40,5 +45,9 @@ x <- 'Baetis'
 classi <- classification(get_uid(x))
 sapply(classi, function(x) x[nrow(x), 'Rank'])
 }
+}
+\seealso{
+  \code{\link[taxize]{classification}},
+  \code{\link[taxize]{tax_name}}
 }
 
